tests/invalid/test2.vyp
python3 main.py tests/invalid/test_syntax_error.vyp
